--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,8 @@ i {
     outline: 1px solid var(--special);
 }
 
-input {
+input,
+textarea {
     background-color: var(--bg2);
     color: var(--fg);
     border-width: 1px;
@@ -126,10 +127,22 @@ select {
     font-size: 1rem;
 }
 
-.main {
+#root {
+    display: flex;
+    overflow: hidden;
+}
+
+.directory {
     width: 100%;
-    max-width: 1080px;
     display: flex;
     flex-direction: column;
-    padding-inline: 4px;
+}
+
+textarea {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 1ch;
+    border-width: 0;
+    resize: none;
 }
